<resources>
    <string name="app_name">智领广告</string>
    <string name="title_name">智领广告</string>
    <string name="navigation_item0">item1</string>
    <string name="navigation_item1">item2</string>
    <string name="no_login">您还未登录，请先登录</string>
    <string name="login">登录</string>
    <string name="release">提交发布</string>
    <string name="forget_password">忘记密码?</string>
    <string name="name_digits">请输入手机号</string>
    <string name="code_hint">请输入手机验证码</string>
    <string name="no_getcode">验证码无效</string>
    <string name="getcode">获取验证码</string>
    <string name="getcode_again">重新获取验证码</string>
    <string name="timer_message">秒后重新获取</string>
    <string name="no_sms">收不到短信，试下</string>
    <string name="voice_sms">语音验证码</string>
    <string name="exit_login">退出登录</string>
    <string name="hot">热门推荐</string>
    <string name="contact_us">联系我们</string>
    <string name="version_update">版本更新</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="setting">设置</string>
    <string name="submit_btn">提交</string>
    <string name="user_info">个人信息</string>
    <string name="cancel">取消</string>
    <string name="no_result">对不起，没有搜索到相关数据</string>
    <string name="periphery">我的周边</string>
    <string name="no_network_connected">网络无法连接，请检查网络连接</string>
</resources>
