<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_title"/>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="3dp"
            android:src="@drawable/phone" />
        <EditText
            android:id="@+id/etName"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="19dp"
            android:maxLength="11"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/name_digits"
            android:textCursorDrawable="@drawable/color_cursor"
            android:inputType="phone"
            android:textColor="@color/tv_333"
            android:textColorHint="@color/text_gray_light"
            android:textSize="13sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/sms" />

        <EditText
            android:id="@+id/etCode"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/code_hint"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/tv_333"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textColorHint="@color/text_gray_light"
            android:textSize="13sp" />
        <TextView
            android:id="@+id/btnGetCode"
            android:background="@drawable/goto_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/getcode"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_sms"
            android:textColor="@color/tv_ccc"
            android:textSize="16dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/no_login"
            android:text="@string/voice_sms"
            android:textSize="16dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:background="@drawable/goto_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:text="@string/login" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="点击登录，即表示同意"
            />
        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="《广告服务协议》"
            android:textColor="@color/no_login"/>
    </LinearLayout>
</LinearLayout>