<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">
    <include layout="@layout/layout_title"/>
    <RelativeLayout
        android:id="@+id/clean_out_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/item_shape">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="清理缓存"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@color/tv_666"
            android:layout_marginLeft="15dp" />
        <TextView
            android:id="@+id/cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher"
            android:layout_toLeftOf="@+id/iv_go1"
            android:layout_marginRight="10dp"
            android:text="25.01MB"
            android:textSize="12sp"
            android:textColor="@color/tv_333"/>
        <ImageView
            android:id="@+id/iv_go1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/go"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp" />
    <RelativeLayout
        android:id="@+id/contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/item_shape"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@color/tv_666"
            android:layout_marginLeft="15dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/go"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp" />
    <RelativeLayout
        android:id="@+id/version_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/item_shape"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_update"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@color/tv_666"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher"
            android:layout_toLeftOf="@+id/iv_go"
            android:layout_marginRight="10dp"
            android:text="1.0.0"
            android:textSize="12sp"
            android:textColor="@color/tv_333"/>
        <ImageView
            android:id="@+id/iv_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/go"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp" />
    <RelativeLayout
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/item_shape"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textSize="16sp"
            android:textColor="@color/tv_666"
            android:layout_marginLeft="14dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/go"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:id="@+id/imageView" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp" />
    <RelativeLayout
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/item_shape"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@color/tv_666"
            android:layout_marginLeft="15dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/go"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/exit_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_login_shape"
        android:text="@string/exit_login"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_margin="15dp"
        />
</LinearLayout>